# paczkomat-atlas

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  JOURNEY.md  LICENSE  README.md  SECRETS.md  package.json  pnpm-lock.yaml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2a08cc2a0894_schedule_mv_refreshes_via_pg_cron.py  5d424a72bd30_create_base_tables_lockers_gminy_nuts2_.py  72d896bb1f4e_add_app_role_with_least_privilege.py  801d68ba0f8e_add_tile_source_sql_functions_for_martin.py  cb36d9c54133_fix_mv_h3_density_r8_unique_index_to_.py  d6af7bb14d60_create_density_materialized_views_and_.py  e7db2eafbd0e_add_staging_schema_for_raw_data_loads.py
api/src/paczkomat_atlas_api/: config.py  db.py  logging.py  main.py
api/src/paczkomat_atlas_api/ingest/: __init__.py  bdl_loader.py  cli.py  eurostat_loader.py  inpost_client.py  prg_loader.py  sync.py
api/src/paczkomat_atlas_api/middleware/: __init__.py  cache.py  logging.py
api/src/paczkomat_atlas_api/models/: __init__.py  gmina.py  locker.py  nuts2.py  population.py  snapshot.py
api/src/paczkomat_atlas_api/repositories/: __init__.py  density.py  h3.py  kpi.py  locker.py
api/src/paczkomat_atlas_api/routers/: __init__.py  density.py  h3.py  health.py  kpi.py  locker.py  velocity.py
api/src/paczkomat_atlas_api/schemas/: __init__.py  density.py  envelope.py  h3.py  kpi.py  locker.py  velocity.py
api/tests/: test_logging_redaction.py
api/tests/api/: conftest.py  test_endpoints.py
api/tests/ingest/: test_inpost_client.py  test_inpost_pagination.py
(+176 files in other folders)
