[project]
name = "paczkomat-atlas-api"
version = "0.0.0"
description = "InPost parcel locker analytics API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "polars>=1.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "alembic>=1.13",
    "geoalchemy2>=0.20.0",
    "alembic-postgresql-enum>=1.10.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.10", "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paczkomat_atlas_api"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
